--- a/login/login.html
+++ b/login/login.html
@@ -13,7 +13,6 @@
     <title>Hello, world!</title>
   </head>
   <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
     <a class="navbar-brand" href="#">
       <img src="https://s3-us-west-1.amazonaws.com/www.investnest.com/investnest-logo.png" width="auto" height="30" alt="">
@@ -25,37 +24,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Browse<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Marketplace Directory<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Messages</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dashboard
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Investments</a>
-            <a class="dropdown-item" href="#">Sponsored Projects</a>
-            <a class="dropdown-item" href="#">Watchlist</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Dashboard</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Profile
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Investor</a>
-            <a class="dropdown-item" href="#">Sponsor</a>
-            <a class="dropdown-item" href="#">Wallet</a>          
-            <a class="dropdown-item" href="#">Settings</a>
-            <a class="dropdown-item" href="#">Logout</a>
-          </div>
-        </li>         
+        <li class="nav-item">
+          <a class="nav-link" href="#">Profile</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link" href="#">Sign Out</a>
+        </li>              
       </ul>
     </div>
   </nav>
-
 
 
 
@@ -63,18 +48,18 @@
   <div class="wrapper container-fluid">
     <div class="row justify-content-center align-items-center">
       <form class="col-12 col-md-3 loginForm">
-        <h2>Login</h2>
+        <h2>Log In</h2>
         <hr>
         <div class="form-group">
           <label for="login-email">Email</label>
-          <input type="text" class="form-control" id="login-email" placeholder="Email">
+          <input type="text" class="form-control" id="login-email">
         </div>
         <div class="form-group">
           <label for="login-password">Password</label>
-          <input type="password" class="form-control" id="login-password" placeholder="Password">
+          <input type="password" class="form-control" id="login-password">
         </div>
         <div class="form-group">
-          <button type="button" class="btn btn-secondary btn-block">Login</button>
+          <button type="button" class="btn btn-primary btn-block">Log In</button>
         </div>
         <div class="wrapper container-fluid">
           <div class="row justify-content-between">
@@ -86,14 +71,13 @@
               </div>   
             <div style="text-align: right;"> 
               <div class="form-check">
-                <a href="#"> Forgot Password?</a>
-              </div>   
+                <a href="#" class="text-secondary"><u>Forgot Password</u></a>
+              </div>
+              <div style="padding-top: 15px;">
+                <a href="#" class="text-secondary"><u>Create an Account</u></a>
+              </div>                 
             </div>             
           </div>
-        </div>
-        <hr>
-        <div class="text-center" style="padding-top: 15px;">
-          <a href="#" class="text-secondary">Create an Account</a>
         </div>
       </form>   
     </div>
