--- a/login/forgot-password.html
+++ b/login/forgot-password.html
@@ -14,74 +14,26 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
-    <a class="navbar-brand" href="#">
-      <img src="https://s3-us-west-1.amazonaws.com/www.investnest.com/investnest-logo.png" width="auto" height="30" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Browse<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dashboard
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Investments</a>
-            <a class="dropdown-item" href="#">Sponsored Projects</a>
-            <a class="dropdown-item" href="#">Watchlist</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Profile
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Investor</a>
-            <a class="dropdown-item" href="#">Sponsor</a>
-            <a class="dropdown-item" href="#">Wallet</a>          
-            <a class="dropdown-item" href="#">Settings</a>
-            <a class="dropdown-item" href="#">Logout</a>
-          </div>
-        </li>         
-      </ul>
-    </div>
-  </nav>
-
-
-
-
-<div class="loginBg">
-  <div class="wrapper container-fluid">
-    <div class="row justify-content-center align-items-center">
-      <form class="col-12 col-md-3 loginForm">
-        <h2>Reset Password</h2>
-        <hr>
-        <div class="form-group">
-          <label for="signup-email">Email</label>
-          <input type="text" class="form-control" id="signup-email" placeholder="Email">
-        </div>     
-        <div class="form-group">
-          <button type="button" class="btn btn-secondary btn-block">Send Reset Link</button>
+    <div class="loginBg">
+      <div class="wrapper container-fluid">
+        <div class="row justify-content-center align-items-center">
+          <form class="col-12 col-md-3 loginForm">
+            <h2>Reset Password</h2>
+            <hr>
+            <div class="form-group">
+              <label for="signup-email">Email</label>
+              <input type="text" class="form-control" id="signup-email" placeholder="Email">
+            </div>     
+            <div class="form-group">
+              <button type="button" class="btn btn-primary btn-block">Send Password Reset Link</button>
+            </div>
+            <div class="text-right">
+              <a href="#" class="text-secondary"><u>Cancel</u></a>
+            </div>
+          </form>   
         </div>
-        <hr>
-        <div class="text-center" style="padding-top: 15px;">
-          <a href="#" class="text-secondary">Back to Login</a>
-        </div>
-      </form>   
+      </div>
     </div>
-  </div>
-</div>
-
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
