Getting ready for new code

--- a/login/check-email-activation.html
+++ b/login/check-email-activation.html
@@ -16,7 +16,9 @@
 
 
 
-
+<div style="width: 400px; height: 400px; background-color: #aaa;">
+    <input type="text" name="" style="width: 83px; height: 48px;">
+</div>
 
     <div class="loginBg">
       <div class="wrapper container-fluid">
